--- a/gumandhealth.client/src/app/pages/admin/recipe-category-admin/recipe-category-admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/recipe-category-admin/recipe-category-admin.component.html
@@ -32,7 +32,9 @@
           <td>
             <!-- زر التعديل -->
             <button class="btn btn-warning btn-sm mr-2" (click)="editCategory(category.id)">Edit</button>
-            <br />            <br />
+            <br />     <br />
+            <button class="btn btn-danger btn-sm mr-2" (click)="confirmDeleteCategory(category.id)">Delete</button>
+            <br />   <br />
 
             <button class="btn btn-info btn-sm mr-2" (click)="viewRecipe(category.id)">viewRecipe</button>
 
