add schudule form working

--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -115,9 +115,9 @@
             </div>
           </li>
           <li class="sidebar-dropdown">
-            <a href="#">
+            <a routerLink="/Schedule">
               <i class="far fa-gem"></i>
-              <span>Components</span>
+              <span>Schedule</span>
             </a>
             <div class="sidebar-submenu">
               <ul>
