--- a/gumandhealth.client/src/app/pages/admin/edit-schedule/edit-schedule.component.html
+++ b/gumandhealth.client/src/app/pages/admin/edit-schedule/edit-schedule.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-12 col-xl-4" style="margin-left:20%; margin-top:5%;">
   <div class="bg-light rounded h-100 p-4">
-    <h6 class="mb-4">Add Schedule</h6>
+    <h6 class="mb-4">Edit Schedule</h6>
     <form [formGroup]="scheduleForm" (ngSubmit)="onSubmit()">
       <div class="row mb-3">
         <label class="col-sm-2 col-form-label">Class</label>
@@ -33,9 +33,7 @@
           <input formControlName="instructorId" type="number" class="form-control" />
         </div>
       </div>
-      <button type="submit" class="btn btn-primary">Add Schedule</button>
+      <button type="submit" class="btn btn-primary">Update Schedule</button>
     </form>
   </div>
 </div>
-
-<app-admin></app-admin>
