--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -105,6 +105,7 @@
                     Recipe
                   </a>
                 </li>
+
                 <li>
                   <a href="#">Orders</a>
                 </li>
@@ -115,35 +116,34 @@
             </div>
           </li>
           <li class="sidebar-dropdown">
-            <a href="#">
-              <i class="far fa-gem"></i>
-              <span>Components</span>
+            <a routerLink="/GetInstructor">
+              GetInstructor
             </a>
-            <div class="sidebar-submenu">
-              <ul>
-                <li>
-                  <a href="#">General</a>
-                </li>
-                <li>
-                  <a href="#">Panels</a>
-                </li>
-                <li>
-                  <a href="#">Tables</a>
-                </li>
-                <li>
-                  <a href="#">Icons</a>
-                </li>
-                <li>
-                  <a href="#">Forms</a>
-                </li>
-              </ul>
-            </div>
+          <div class="sidebar-submenu">
+            <ul>
+              <li>
+                <a href="#">General</a>
+              </li>
+              <li>
+                <a href="#">Panels</a>
+              </li>
+              <li>
+                <a href="#">Tables</a>
+              </li>
+              <li>
+                <a href="#">Icons</a>
+              </li>
+              <li>
+                <a href="#">Forms</a>
+              </li>
+            </ul>
+          </div>
           </li>
           <li class="sidebar-dropdown">
             <!--<a href="#">
-    <i class="fa fa-chart-line"></i>
-    <span>Charts</span>
-  </a>-->
+      <i class="fa fa-chart-line"></i>
+      <span>Charts</span>
+    </a>-->
             <a routerLink="/recipe-category-admin">
               Recipe
             </a>
