order +front end recipe post put view

--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -144,9 +144,14 @@
     <i class="fa fa-chart-line"></i>
     <span>Charts</span>
   </a>-->
+          
+
             <a routerLink="/recipe-category-admin">
-              Recipe
-            </a>
+              <span>
+                <i class="fa fa-chart-line"></i>
+                Recipe
+                </span>
+</a>
             <div class="sidebar-submenu">
               <ul>
                 <li>
@@ -165,9 +170,9 @@
             </div>
           </li>
           <li class="sidebar-dropdown">
-            <a href="#">
+            <a href="/order - admin">
               <i class="fa fa-globe"></i>
-              <span>Maps</span>
+              <span>order</span>
             </a>
             <div class="sidebar-submenu">
               <ul>
