--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -105,6 +105,8 @@
                     Recipe
                   </a>
                 </li>
+
+
                 <li>
                   <a href="#">Orders</a>
                 </li>
@@ -118,6 +120,11 @@
             <a href="#">
               <i class="far fa-gem"></i>
               <span>Components</span>
+            </a>
+
+            <a routerLink="/admin/products">
+              <i class="far fa-gem"></i>
+              <span>Products</span>
             </a>
             <div class="sidebar-submenu">
               <ul>
