--- a/gumandhealth.client/src/app/pages/admin/adminproducts/adminproducts.component.html
+++ b/gumandhealth.client/src/app/pages/admin/adminproducts/adminproducts.component.html
@@ -1,36 +1,42 @@
 <h2>{{ isEditMode ? 'Edit Product' : 'Add New Product' }}</h2>
-<form (submit)="isEditMode ? updateProduct() : createProduct()">
-  <div>
-    <label>Name:</label>
-    <input [(ngModel)]="newProduct.name" name="name" required />
-  </div>
-  <div>
-    <label>Description:</label>
-    <input [(ngModel)]="newProduct.description" name="description" required />
-  </div>
-  <div>
-    <label>Price:</label>
-    <input type="number" [(ngModel)]="newProduct.price" name="price" required />
-  </div>
-  <div>
-    <label>Category ID:</label>
-    <input type="number" [(ngModel)]="newProduct.categoryId" name="categoryId" required />
-  </div>
-  <div>
-    <label>Discount:</label>
-    <input type="number" [(ngModel)]="newProduct.discount" name="discount" />
-  </div>
-  <div>
-    <label>Tags:</label>
-    <input [(ngModel)]="newProduct.tags" name="tags" />
-  </div>
-  <div>
-    <label>Additional Information:</label>
-    <textarea [(ngModel)]="newProduct.additionalInformation" name="additionalInformation"></textarea>
-  </div>
-  <div>
-    <label>Image URL:</label>
-    <input [(ngModel)]="newProduct.image1" name="image1" />
-  </div>
-  <button type="submit">{{ isEditMode ? 'Update' : 'Create' }}</button>
+<form (ngSubmit)="isEditMode ? updateProduct() : createProduct()" enctype="multipart/form-data">
+  <table class="form-table">
+    <tr>
+      <td><label for="name">Name:</label></td>
+      <td><input id="name" [(ngModel)]="newProduct.name" name="name" required /></td>
+    </tr>
+    <tr>
+      <td><label for="description">Description:</label></td>
+      <td><input id="description" [(ngModel)]="newProduct.description" name="description" required /></td>
+    </tr>
+    <tr>
+      <td><label for="price">Price:</label></td>
+      <td><input id="price" type="number" [(ngModel)]="newProduct.price" name="price" required /></td>
+    </tr>
+    <tr>
+      <td><label for="categoryId">Category ID:</label></td>
+      <td><input id="categoryId" type="number" [(ngModel)]="newProduct.categoryId" name="categoryId" required /></td>
+    </tr>
+    <tr>
+      <td><label for="discount">Discount:</label></td>
+      <td><input id="discount" type="number" [(ngModel)]="newProduct.discount" name="discount" /></td>
+    </tr>
+    <tr>
+      <td><label for="tags">Tags:</label></td>
+      <td><input id="tags" [(ngModel)]="newProduct.tags" name="tags" /></td>
+    </tr>
+    <tr>
+      <td><label for="additionalInformation">Additional Information:</label></td>
+      <td><textarea id="additionalInformation" [(ngModel)]="newProduct.additionalInformation" name="additionalInformation"></textarea></td>
+    </tr>
+    <tr>
+      <td><label for="image">Upload Image:</label></td>
+      <td><input id="image" type="file" (change)="onFileSelected($event)" /></td>
+    </tr>
+    <tr>
+      <td colspan="2" class="submit-row">
+        <button type="submit">{{ isEditMode ? 'Update' : 'Create' }}</button>
+      </td>
+    </tr>
+  </table>
 </form>
