--- a/gumandhealth.client/src/app/pages/classes/classes.component.html
+++ b/gumandhealth.client/src/app/pages/classes/classes.component.html
@@ -1,12 +1,10 @@
 <!-- Hero Section Begin -->
-<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/classes-bg.jpg)'">
+<div class="hero-section set-bg" [style.backgroundImage]="'url(/assets/img/Vary-your-cardio-1.jpg)'">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-
-
-        <div class="hero-text">
-          <h2>Classes</h2>
+        <div class="hero-text" style="position: absolute; top: 50%; left: 50%; transform: translate(-60%, -87%); color: white; font-size:20px">
+          <h2 style="color: white; font-size: 50px;">Classes</h2>
         </div>
       </div>
     </div>
@@ -26,7 +24,7 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-3 col-md-6" *ngFor="let classItem of filteredClasses">
+      <div class="col-lg-4 col-md-6 mb-4" *ngFor="let classItem of filteredClasses">
         <div class="single-classes-item" (click)="goToClassDetails(classItem.id)">
           <img [src]="'https://localhost:7280/api/Classes/getImages/' + classItem.imagePath"
                alt="{{ classItem.name }}"
@@ -35,6 +33,7 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
 <!-- Classes Section End -->
