i don't know what the hell this commit is

--- a/gumandhealth.client/src/app/pages/single-gym/single-gym.component.html
+++ b/gumandhealth.client/src/app/pages/single-gym/single-gym.component.html
@@ -55,7 +55,7 @@
 
           <!-- Subscribe Button -->
           
-          <button class="subscribe-button" (click)="addUserSubscription(singleGymData.id)">Subscribe Now</button>
+          <button class="subscribe-button btn-primary" (click)="addUserSubscription(singleGymData.id)">Subscribe Now</button>
 
         </div>
       </div>
