--- a/gumandhealth.client/src/app/components/home/home.component.html
+++ b/gumandhealth.client/src/app/components/home/home.component.html
@@ -127,10 +127,10 @@
         <div class="section-title">
           <h2>Join Our Gym Today</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-            ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
-            accumsan lacus vel facilisis.
+            "Join us today and experience a complete fitness journey! We offer state-of-the-art equipment,
+            personalized training programs, and expert coaches to help you reach your health and fitness
+            goals. Be a part of our community and start your path to a healthier,
+            more active life!"
           </p>
         </div>
       </div>
@@ -312,6 +312,7 @@
     </div>
   </div>
 </div>
-
+<div class="text-center">
+  <a routerLink="/Gyms" class="primary-btn callto-btn">All product</a>
+</div>
 <br />
-
