--- a/gumandhealth.client/src/app/pages/password-reset/password-reset.component.css
+++ b/gumandhealth.client/src/app/pages/password-reset/password-reset.component.css
@@ -1,5 +1,4 @@
-/* Styles for both Register and Login forms */
-.register-container, .login-container {
+.register-container {
   max-width: 500px;
   margin: 50px auto;
   padding: 30px;
@@ -40,7 +39,7 @@ input.form-control {
     outline: none;
   }
 
-.error-message, .invalid-feedback {
+.error-message {
   color: #e74c3c;
   font-size: 12px;
   margin-top: 5px;
@@ -81,17 +80,3 @@ button.btn-secondary {
   button.btn-secondary:hover {
     background-color: #5a6268;
   }
-
-button.btn-link {
-  color: #007bff;
-  padding: 0;
-}
-
-  button.btn-link:hover {
-    color: #0056b3;
-    text-decoration: underline;
-  }
-
-.spinner-border {
-  margin-right: 5px;
-}
