--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -33,3 +33,22 @@
     </div>
   </div>
 </header>
+<br />
+<br />
+<div *ngIf="shouldShowSearch()" class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text">
+            <i class="fa fa-search"></i>
+          </span>
+        </div>
+        <input type="text" class="form-control" placeholder="Search for something..." [(ngModel)]="searchQuery">
+        <div class="input-group-append">
+          <button class="btn btn-success" (click)="performSearch()">Search</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
