--- a/gumandhealth.client/src/app/components/home/home.component.html
+++ b/gumandhealth.client/src/app/components/home/home.component.html
@@ -1,20 +1,4 @@
-<div class="container mt-4">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <span class="input-group-text">
-            <i class="fa fa-search"></i>
-          </span>
-        </div>
-        <input type="text" class="form-control" placeholder="Search for something..." [(ngModel)]="searchQuery">
-        <div class="input-group-append">
-          <button class="btn btn-success" (click)="performSearch()">Search</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
 
@@ -313,6 +297,6 @@
   </div>
 </div>
 <div class="text-center">
-  <a routerLink="/Gyms" class="primary-btn callto-btn">All product</a>
+  <a routerLink="/shop" class="primary-btn callto-btn">All product</a>
 </div>
 <br />
