--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -34,8 +34,9 @@
   </div>
 </header>
 <br />
-<br />
-<div *ngIf="shouldShowSearch()" class="container mt-4">
+<div *ngIf="shouldShowSearch()" class="container mt-4" style="
+    margin-top: 0px !important;
+">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="input-group mb-3">
