--- a/gumandhealth.client/src/app/components/footer/footer.component.html
+++ b/gumandhealth.client/src/app/components/footer/footer.component.html
@@ -10,16 +10,16 @@
             <script>
               document.write(new Date().getFullYear());
             </script>
-            All rights reserved | This template is made with
+            All rights reserved Gymster 2024
            
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </div>
           <br />
           <!-- Links Section -->
           <div class="footer-links">
-            <a href="/terms-of-service">Terms of Service</a> |
-            <a href="/privacy-policy">Privacy Policy</a> |
-            <a href="/support">Support</a>
+            <a routerLink="/contact">Contact Us</a> |
+            <a href="/about">About Us</a> |
+            <a href="/">Home</a>
           </div>
 
           <!-- Social Media Section -->
