some design dashboard

--- a/gumandhealth.client/src/app/components/header/header.component.html
+++ b/gumandhealth.client/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header-section">
+<header class="header-section" *ngIf="!isAdminPage()">
   <div class="container-fluid">
     <div class="inner-header">
       <div class="row">
