--- a/gumandhealth.client/src/app/pages/admin/admin.component.html
+++ b/gumandhealth.client/src/app/pages/admin/admin.component.html
@@ -34,11 +34,11 @@
         </div>
       </div>
       <div class="sidebar-header">
-        <div class="user-pic">
+        <!--<div class="user-pic">
           <img class="img-responsive img-rounded" src="https://raw.githubusercontent.com/azouaoui-med/pro-sidebar-template/gh-pages/src/img/user.jpg"
             alt="User picture">
-        </div>
-        <div class="user-info">
+        </div>-->
+        <!--<div class="user-info">
           <span class="user-name">Jhon
             <strong>Smith</strong>
           </span>
@@ -47,10 +47,10 @@
             <i class="fa fa-circle"></i>
             <span>Online</span>
           </span>
-        </div>
+        </div>-->
       </div>
       <!-- sidebar-header  -->
-      <div class="sidebar-search">
+      <!--<div class="sidebar-search">
         <div>
           <div class="input-group">
             <input type="text" class="form-control search-menu" placeholder="Search...">
@@ -61,14 +61,14 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
       <!-- sidebar-search  -->
       <div class="sidebar-menu">
         <ul>
           <li class="header-menu">
             <span>General</span>
           </li>
-          <li class="sidebar-dropdown">
+          <!--<li class="sidebar-dropdown">
             <a href="#">
               <i class="fa fa-tachometer-alt"></i>
               <span>Dashboard</span>
@@ -90,7 +90,7 @@
                 </li>
               </ul>
             </div>
-          </li>
+          </li>-->
           <li class="sidebar-dropdown">
             <a routerLink="/admin/classes">
               <i class="fa fa-shopping-cart"></i>
@@ -119,11 +119,15 @@
           </li>
           <li class="sidebar-dropdown">
         
-              <i class="far fa-gem"></i>
+              <!--<i class="far fa-gem"></i>
               <span>Schedule</span>
             <a routerLink="/GetInstructor">
               GetInstructor
-            </a>
+            </a>-->
+
+
+
+
 
             <a routerLink="/admin/products">
               <i class="far fa-gem"></i>
@@ -224,40 +228,15 @@
             <span class="badge badge-pill badge-primary">Beta</span>
             </a>
           </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-calendar"></i>
-              <span>Calendar</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-folder"></i>
-              <span>Examples</span>
-            </a>
-          </li>
+         
+          
+         
         </ul>
       </div>
       <!-- sidebar-menu  -->
     </div>
     <!-- sidebar-content  -->
-    <div class="sidebar-footer">
-      <a href="#">
-        <i class="fa fa-bell"></i>
-        <span class="badge badge-pill badge-warning notification">3</span>
-      </a>
-      <a href="#">
-        <i class="fa fa-envelope"></i>
-        <span class="badge badge-pill badge-success notification">7</span>
-      </a>
-      <a href="#">
-        <i class="fa fa-cog"></i>
-        <span class="badge-sonar"></span>
-      </a>
-      <a href="#">
-        <i class="fa fa-power-off"></i>
-      </a>
-    </div>
+    
   </nav>
   <!-- sidebar-wrapper  -->
   <main class="page-content">
