--- a/gumandhealth.client/src/app/pages/admin/get-instructor/get-instructor.component.css
+++ b/gumandhealth.client/src/app/pages/admin/get-instructor/get-instructor.component.css
@@ -33,3 +33,6 @@ tbody tr:hover {
   padding: 15px; /* Padding inside the edit component */
   background-color: #fff; /* White background for the edit component */
 }
+::ng-deep app-header {
+  display: none !important;
+}
