--- a/gumandhealth.client/src/app/pages/admin/recipe-category-admin/recipe-category-admin.component.css
+++ b/gumandhealth.client/src/app/pages/admin/recipe-category-admin/recipe-category-admin.component.css
@@ -12,3 +12,20 @@ table caption {
   font-weight: bold; /* لجعل النص عريضًا */
   margin-bottom: 10px; /* المسافة بين الـ <caption> والجدول */
 }
+app-header {
+  display: none !important;
+}
+
+  app-header header,
+  app-header header .container-fluid,
+  app-header header .inner-header,
+  app-header header .row {
+    display: none !important;
+  }
+
+
+
+
+::ng-deep app-header {
+  display: none !important;
+}
