--- a/gumandhealth.client/src/app/pages/admin/all-schedule/all-schedule.component.html
+++ b/gumandhealth.client/src/app/pages/admin/all-schedule/all-schedule.component.html
@@ -126,8 +126,9 @@
           </div>
         </div>
         <!--  -->
-        
+
       </div>
     </div>
   </div>
 </div>
+<app-admin></app-admin>
